# plasma-wallpaper-gif

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md
gif/: metadata.desktop  plasma-wallpaper-gif.desktop
gif/contents/config/: main.xml
gif/contents/ui/: config.qml  main.qml
